--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,3 +2,11 @@ ion-card {
   margin-top: .5rem;
   margin-bottom: .5rem;
 }
+
+ion-card-subtitle {
+  font-size: .6rem;
+}
+
+ion-card-title {
+  font-size: 1rem;
+}
